add footer and faq sections

--- a/index.html
+++ b/index.html
@@ -1003,6 +1003,176 @@
 
 
 
+      <!-- faq section start -->
+
+      <section class="faq-sec">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-12">
+                  <h6 class="section-small-h6 m-0">FAQ’s</h6>
+               </div>
+               <div class="col-md-12 mt-4">
+                  <h1 class="section-h45">Frequently Asked<br>
+                     Questions
+                  </h1>
+               </div>
+            </div>
+            <div class="row">
+               <div class="col-12 col-lg-12 m-auto mt-4">
+                  <div class="accordion" id="accordionExample">
+                     <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                              Can I work with The Good Marketer?
+                           </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                           <div class="accordion-body">
+                              <p class="global-p">Just because we’re a digital marketing agency in London, it doesn’t mean we can’t help your business wherever you are in the UK and wherever your audience is in the world. We run campaigns at all levels and completely understand the needs and challenges of running a small business! Our experience across a broad spectrum of digital marketing platforms means we have the experience and the know-how to get the job done.
+                              </p>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingTwo">
+                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                              How Long Has The Good Marketer Been An Agency?
+                           </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                           <div class="accordion-body">
+                              <p class="global-p">Just because we’re a digital marketing agency in London, it doesn’t mean we can’t help your business wherever you are in the UK and wherever your audience is in the world. We run campaigns at all levels and completely understand the needs and challenges of running a small business! Our experience across a broad spectrum of digital marketing platforms means we have the experience and the know-how to get the job done.
+                              </p>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingThree">
+                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                              What Makes Us Different From Other Digital Marketing Agencies in London?
+                           </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                           <div class="accordion-body">
+                              <p class="global-p">Just because we’re a digital marketing agency in London, it doesn’t mean we can’t help your business wherever you are in the UK and wherever your audience is in the world. We run campaigns at all levels and completely understand the needs and challenges of running a small business! Our experience across a broad spectrum of digital marketing platforms means we have the experience and the know-how to get the job done.
+                              </p>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingFour">
+                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                              How Long Is A Partnership Term?
+                           </button>
+                        </h2>
+                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                           <div class="accordion-body">
+                              <p>Just because we’re a digital marketing agency in London, it doesn’t mean we can’t help your business wherever you are in the UK and wherever your audience is in the world. We run campaigns at all levels and completely understand the needs and challenges of running a small business! Our experience across a broad spectrum of digital marketing platforms means we have the experience and the know-how to get the job done.
+                              </p>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingFive">
+                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                              I’m Not Sure Which Channels To Get Started With – Can You Help?
+                           </button>
+                        </h2>
+                        <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+                           <div class="accordion-body">
+                              <p>Just because we’re a digital marketing agency in London, it doesn’t mean we can’t help your business wherever you are in the UK and wherever your audience is in the world. We run campaigns at all levels and completely understand the needs and challenges of running a small business! Our experience across a broad spectrum of digital marketing platforms means we have the experience and the know-how to get the job done.
+                              </p>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+
+
+      <!-- faq section end -->
+
+
+
+      <!-- footer section start -->
+
+      <section class="footer-sec">
+         <div class="container">
+            <div class="row">
+               <div class="col-12 col-sm-6 col-lg-3 mt-3">
+                  <div>
+                     <img src="assets/images/market-logo.png" class="img-fluid">
+                     <ul class="footer-ul">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Who We Are</a></li>
+                        <li><a href="#">What We Do</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Case Studies</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Careers</a></li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="col-12 col-sm-6 col-lg-3 mt-3">
+                  <div>
+                     <p class="footer-sub-heading">WHAT WE DO</p>
+                     <ul class="footer-ul">
+                        <li><a href="#">Facebook Advertising</a></li>
+                        <li><a href="#">Instagram Advertising</a></li>
+                        <li><a href="#">SEO</a></li>
+                        <li><a href="#">Email Marketing</a></li>
+                        <li><a href="#">Google Advertising</a></li>
+                        <li><a href="#">Social Media Management</a></li>
+                        <li><a href="#">eCommerce Agency</a></li>
+                        <li><a href="#">Retail Marketing</a></li>
+                        <li><a href="#">Direct To Consumer Marketing</a></li>
+                        <li><a href="#">Growth Marketing</a></li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="col-12 col-sm-6 col-lg-3 mt-3">
+                  <div>
+                     <p class="footer-sub-heading">LONDON OFFICE</p>
+                     <ul class="footer-ul">
+                        <li><a href="#">Phone: 0203 963 0810 </a></li>
+                        <li><a href="#">Address: 4 Ravey Street, London, EC2A 4QP</a></li>
+                        <li><a href="#">info@thegoodmarketer.co.uk</a></li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="col-12 col-sm-6 col-lg-3 mt-3">
+                  <div>
+                     <p class="footer-sub-heading">LONDON OFFICE</p>
+                     <ul class="footer-ul">
+                        <li><a href="#">Phone: 0203 963 0810 </a></li>
+                        <li><a href="#">Address: 4 Ravey Street, London, EC2A 4QP</a></li>
+                        <li><a href="#">info@thegoodmarketer.co.uk</a></li>
+                     </ul>
+                  </div>
+               </div>
+            </div>
+            <hr class="mt-5 mb-3">
+            <div class="row bottom-row mt-5">
+               <div class="col-md-8">
+                  <p class="">The Good Marketer Group Ltd | Sitemap | Privacy Policy | VAT Number: 296441964</p>
+               </div>
+               <div class="col-md-4">
+                  <div class="text-start text-md-center d-flex">
+                     <a href="#" class="icon-span"><i class="fa fa-twitter"></i></a>
+                     <a href="#" class="icon-span"><i class="fa fa-facebook-f"></i></a>
+                     <a href="#" class="icon-span"><i class="fa fa-instagram"></i></a>
+                     <a href="#" class="icon-span"><i class="fa fa-whatsapp"></i></a>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+
+      <!-- footer section end -->
+
+
 
       <script src="assets/js/jquery.js"></script>
       <script src='assets/js/bootstrap.bundle.js'></script>
