--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                <div class="collapse navbar-collapse" id="navbarNavDropdown">
                   <ul class="navbar-nav">
                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Who&nbsp;Are&nbsp;We</a>
+                        <a class="nav-link active" aria-current="page" href="meet-the-team.html">Who&nbsp;Are&nbsp;We</a>
                      </li>
                      <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
