some more work on meet the team page

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
             </div>
             <div class="row video-slider-row mt-5">
                <div class="large-12 columns mt-2">
-                  <div class="owl-carousel">
+                  <div class="owl-carousel video-owl-carousel">
                      <div class="item">
                         <div class="carosal-item text-center">
                            <img src="assets/images/Group 597.png" class="img-fluid">
