--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -88,6 +88,103 @@
             </div>
         </section>
 
+        <section class="reliable-team-sec mt-50">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                       <div class="text-center">
+                        <h1 class="section-h45">A Reliable Team Of</h1>
+                        <h1 class="section-h45 redOne-fill-color">Professionals</h1>
+                        <p class="mt-5 global-p">We stand by our fully transparent ethos that keeps you informed every step of your campaign with us. Consider us as an extension to your own team as you work with our specialists to achieve the best results. Our team is up to date with the latest marketing data and skills, as well as at the heart of the digital revolution and creativity in our London based office.  </p>
+                        <p class="mt-4 global-p">We manage your campaigns, so you can focus on running your business. Extend your team by working with young and diverse individuals, who are passionate about growing your business with you.</p>
+                       </div>
+                    </div>
+                </div>
+                <div class="row counting-row">
+                    <div class="col-md-4 mt-3">
+                        <div class="counting-card text-center">
+                            <h1 class="redOne-fill-color">2017</h1>
+                            <p class="mt-3 global-p">The year we were established</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mt-3">
+                        <div class="counting-card text-center">
+                            <h1 class="redOne-fill-color">24</h1>
+                            <p class="mt-3 global-p">Our team has grown from 5 to 24 people in 2020-21</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mt-3">
+                        <div class="counting-card text-center">
+                            <h1 class="redOne-fill-color">58</h1>
+                            <p class="mt-3 global-p">The number of Small Businesses we work with.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="our-client-sec mt-50">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h6 class="section-small-h6">Our Clients</h6>
+                        <h1 class="section-h45 mt-4 mt-lg-3 mt-xl-4">We're proud to have worked with</h1>
+                    </div>
+                </div>
+                <div class="client-carousel">
+                    <div class="owl-carousel team-owl-carousel">
+                        <div class="item">
+                           <div class="carosal-item text-center">
+                              <img src="assets/images/Rectangle 49109.png" class="carousel-img">
+                           </div>
+                        </div>
+                        <div class="item">
+                           <div class="carosal-item text-center">
+                            <img src="assets/images/Rectangle 49109.png" class="carousel-img">
+                           </div>
+                        </div>
+                        <div class="item">
+                           <div class="carosal-item text-center">
+                            <img src="assets/images/Rectangle 49109.png" class="carousel-img">
+                           </div>
+                        </div>
+                        <div class="item">
+                           <div class="carosal-item text-center">
+                            <img src="assets/images/Rectangle 49109.png" class="carousel-img">
+                           </div>
+                        </div>
+                        <div class="item">
+                           <div class="carosal-item text-center">
+                            <img src="assets/images/Rectangle 49109.png" class="carousel-img">
+                           </div>
+                        </div>
+                        <div class="item">
+                           <div class="carosal-item text-center">
+                            <img src="assets/images/Rectangle 49109.png" class="carousel-img">
+                           </div>
+                        </div>
+                     </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="extended-team-sec mt-50">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h6 class="section-small-h6">We’re Your</h6>
+                        <h1 class="section-h45 mt-3">Extended Team </h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 mt-4 text-center">
+                        <p class="global-p">Our fun and innovative team are always looking for creative ways to enhance campaigns and improve results, so why not increase your in-house team with The Good Marketer’s own experts! We have a young, experienced team with a range of different marketing backgrounds, so you can have the best of the best working on your campaign. We have recently expanded, as we continue to grow our team to offer clients a variety of different services to enhance their visibility and increase conversions. We always consider our clients as part of our own team, as we work towards the same goals to achieve the best results possible. </p>
+                        <p class="global-p mt-2">If you have a project in mind and would like help from a leading marketing agency in London, don’t hesitate to get the ball rolling and contact a member of our team, today! We’d love to hear from you and are ready to enhance your campaign!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
     </section>
