add number counter

--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -103,19 +103,19 @@
                 <div class="row counting-row">
                     <div class="col-md-4 mt-3">
                         <div class="counting-card text-center">
-                            <h1 class="redOne-fill-color">2017</h1>
+                            <h1 class="redOne-fill-color count">2017</h1>
                             <p class="mt-3 global-p">The year we were established</p>
                         </div>
                     </div>
                     <div class="col-md-4 mt-3">
                         <div class="counting-card text-center">
-                            <h1 class="redOne-fill-color">24</h1>
+                            <h1 class="redOne-fill-color count">24</h1>
                             <p class="mt-3 global-p">Our team has grown from 5 to 24 people in 2020-21</p>
                         </div>
                     </div>
                     <div class="col-md-4 mt-3">
                         <div class="counting-card text-center">
-                            <h1 class="redOne-fill-color">58</h1>
+                            <h1 class="redOne-fill-color count">58</h1>
                             <p class="mt-3 global-p">The number of Small Businesses we work with.</p>
                         </div>
                     </div>
