create packages page

--- a/index.html
+++ b/index.html
@@ -878,9 +878,7 @@
          </div>
       </section>
       <!-- top marketing section end-->
-
       <!-- latest news section start -->
-
       <section class="latest-news-sec">
          <div class="container">
             <div class="row">
@@ -891,7 +889,8 @@
                      </div>
                      <div class="card-body">
                         <h3>Erat Vehicula Gravida Seden
-                           Tincidunt Tortor.</h3>
+                           Tincidunt Tortor.
+                        </h3>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis </p>
                      </div>
                   </div>
@@ -903,7 +902,8 @@
                      </div>
                      <div class="card-body">
                         <h3>Erat Vehicula Gravida Seden
-                           Tincidunt Tortor.</h3>
+                           Tincidunt Tortor.
+                        </h3>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis </p>
                      </div>
                   </div>
@@ -919,19 +919,15 @@
             </div>
          </div>
       </section>
-
       <!-- latest news section end -->
-
-
-
       <!-- Digital marketing agency section start -->
-
       <section class="digital-agency-sec">
          <div class="container">
             <div class="row">
                <div class="col-md-12 text-center">
                   <h1 class="section-h45 mt-5">A DIGITAL MARKETING<br>
-                     AGENCY UNLIKE ANY OTHER</h1>
+                     AGENCY UNLIKE ANY OTHER
+                  </h1>
                </div>
             </div>
             <div class="row text-row">
@@ -944,12 +940,8 @@
             </div>
          </div>
       </section>
-
       <!-- Digital marketing agency section end -->
-
-
       <!-- call our team secction start -->
-
       <section class="team-call-sec">
          <div class="container">
             <div class="row heading-row">
@@ -998,13 +990,8 @@
             </div>
          </div>
       </section>
-
       <!-- call our team secction end -->
-
-
-
       <!-- faq section start -->
-
       <section class="faq-sec">
          <div class="container">
             <div class="row">
@@ -1023,7 +1010,7 @@
                      <div class="accordion-item">
                         <h2 class="accordion-header" id="headingOne">
                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                              Can I work with The Good Marketer?
+                           Can I work with The Good Marketer?
                            </button>
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
@@ -1036,7 +1023,7 @@
                      <div class="accordion-item">
                         <h2 class="accordion-header" id="headingTwo">
                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                              How Long Has The Good Marketer Been An Agency?
+                           How Long Has The Good Marketer Been An Agency?
                            </button>
                         </h2>
                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
@@ -1049,7 +1036,7 @@
                      <div class="accordion-item">
                         <h2 class="accordion-header" id="headingThree">
                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                              What Makes Us Different From Other Digital Marketing Agencies in London?
+                           What Makes Us Different From Other Digital Marketing Agencies in London?
                            </button>
                         </h2>
                         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
@@ -1062,7 +1049,7 @@
                      <div class="accordion-item">
                         <h2 class="accordion-header" id="headingFour">
                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                              How Long Is A Partnership Term?
+                           How Long Is A Partnership Term?
                            </button>
                         </h2>
                         <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
@@ -1075,7 +1062,7 @@
                      <div class="accordion-item">
                         <h2 class="accordion-header" id="headingFive">
                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                              I’m Not Sure Which Channels To Get Started With – Can You Help?
+                           I’m Not Sure Which Channels To Get Started With – Can You Help?
                            </button>
                         </h2>
                         <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
@@ -1090,14 +1077,8 @@
             </div>
          </div>
       </section>
-
-
       <!-- faq section end -->
-
-
-
       <!-- footer section start -->
-
       <section class="footer-sec">
          <div class="container">
             <div class="row">
@@ -1169,11 +1150,7 @@
             </div>
          </div>
       </section>
-
       <!-- footer section end -->
-
-
-
       <script src="assets/js/jquery.js"></script>
       <script src='assets/js/bootstrap.bundle.js'></script>
       <script src="assets/owlcarousel/owl.carousel.js"></script>
