change header of pages

--- a/blogs.html
+++ b/blogs.html
@@ -68,15 +68,14 @@
                   </div>
                </div>
             </nav>
-            <div class="top-header blog-top-header">
-                <img src="assets/images/blogs.jpg" class="img-fluid">
-                <div class="bg-overlay"></div>
-                <div class="text-box">
-                    <div class="container">
-                       <div class="right-sec">
-                          <div class="right-text-sec">
-                             <h1>Our Blog</h1>
-                             <h3>Marketing insights & more</h3>
+            <div class="top-header blog-top-header p-0">
+                 <div class="pages-banner-head-content">
+                    <div class="bg-black-overlay"></div>
+                    <div class="pages-banner-text-box">
+                       <div class="container">
+                          <div class="col-md-12">
+                             <h1 class="banner-main-heading">Our <span class="redOne-fill-color">Blog.</span></h1>
+                             <h3 class="banner-sub-heading">Marketing insights & more</h3>
                           </div>
                        </div>
                     </div>
