--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -71,12 +71,17 @@
                   </div>
                </div>
             </nav>
-            <div class="team-page-head">
-               <img src="assets/images/The-Good-Marketer-18-scaled.jpg" class="img-fluid">
-               <div class="bg-overlay"></div>
-               <div class="text-box">
-                  <h1 class="section-h45 ps-4 ps-lg-0">Meet The <span class="outline-text">Team</span></h1>
-                  <p class="global-p ps-4 ps-lg-0">A fast-growing team of digital experts delivering effective and proactive marketing solutions.</p>
+            <div class="top-header meet-team-top-header p-0">
+               <div class="pages-banner-head-content">
+                  <div class="bg-black-overlay"></div>
+                  <div class="pages-banner-text-box">
+                     <div class="container">
+                        <div class="col-md-12 col-lg-8">
+                           <h1 class="banner-main-heading">Meet The<br> <span class="redOne-fill-color">Team.</span></h1>
+                           <h3 class="banner-sub-heading">A fast-growing team of digital experts delivering effective and proactive marketing solutions.</h3>
+                        </div>
+                     </div>
+                  </div>
                </div>
             </div>
          </section>
