packages page header

--- a/packages.html
+++ b/packages.html
@@ -68,19 +68,14 @@
                   </div>
                </div>
             </nav>
-            <div class="packages-page-head top-header">
-               <img src="assets/images/The-Good-Marketer-18-scaled.jpg" class="img-fluid">
-               <div class="bg-overlay"></div>
-               <div class="text-box">
-                  <div class="container">
-                     <div class="col-md-8 right-sec">
-                        <div class="right-text-sec">
-                           <h1>Our Packages.
-                           </h1>
-                           <div class="">
-                              <p>We promise flexibility and transparency, and that starts with the payment and packaging of our services. Choose the package which best suits your Digital Marketing requirements. 
-                              </p>
-                           </div>
+            <div class="packages-page-head top-header p-0">
+               <div class="pages-banner-head-content">
+                  <div class="bg-black-overlay"></div>
+                  <div class="pages-banner-text-box">
+                     <div class="container">
+                        <div class="col-md-12 col-lg-8">
+                           <h1 class="banner-main-heading">Our<br> <span class="redOne-fill-color">Packages.</span></h1>
+                           <h3 class="banner-sub-heading">We promise flexibility and transparency, and that starts with the payment and packaging of our services. Choose the package which best suits your Digital Marketing requirements.</h3>
                         </div>
                      </div>
                   </div>
